# bevy_font_family

./: Cargo.toml
assets/fonts/fira_sans/: README.md
bevy_font_family_derive/: Cargo.toml
bevy_font_family_derive/src/: lib.rs  parse.rs
bevy_font_family_derive/src/derive/: font_family.rs  mod.rs
examples/: font_family.rs
src/: font_builder.rs  font_definition.rs  font_family.rs  font_weights.rs  lib.rs  prelude.rs
