[package]
name = "bevy_font_family"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_font_family_derive = { path = "bevy_font_family_derive", version = "0.1.0" }

[dependencies.bevy]
version = "0.8.1"
default-features = false
features = ["bevy_asset"]

[dev-dependencies.bevy]
version = "0.8.0"
default-features = false
features = [
  "bevy_asset",
  "bevy_text",
  "bevy_render",
  "bevy_core_pipeline",
  "render",
  "x11",
  "filesystem_watcher",
  "bevy_ui",
]

[[example]]
name = "font_family"
path = "examples/font_family.rs"
